fix: blog index spacing tokens, 404 button base class, tag-filter font, footer link consistency, --nav-height token

--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -64,6 +64,7 @@
   --sp-7: 3rem;
   --sp-8: 4rem;
   --sp-9: 6rem;
+  --nav-height: 4rem;
 }
 
 /* --------------------------------------------------------------------------
